Add Verbosity option to all InterpolationTargets.
This allows the general interpolator framework to understand
verbosity.

--- a/tests/InputFiles/CurvedScalarWave/PlaneWaveMinkowski3D.yaml
+++ b/tests/InputFiles/CurvedScalarWave/PlaneWaveMinkowski3D.yaml
@@ -114,6 +114,7 @@ InterpolationTargets:
     Lmax: 10
     Center: [0., 0., 0.]
     Radius: 1.
+    Verbosity: Quiet
 
 Observers:
   VolumeFileName: "PlaneWaveMinkowski3DVolume"
