Add verbosity tag to interpolator.

--- a/tests/InputFiles/GeneralizedHarmonic/BinaryBlackHole.yaml
+++ b/tests/InputFiles/GeneralizedHarmonic/BinaryBlackHole.yaml
@@ -199,6 +199,9 @@ Observers:
   VolumeFileName: "GhBinaryBlackHoleVolumeData"
   ReductionFileName: "GhBinaryBlackHoleReductionData"
 
+Interpolator:
+  Verbosity: Quiet
+
 ApparentHorizons:
   AhA:
     InitialGuess:
