--- a/tests/InputFiles/GeneralizedHarmonic/KerrSchild.yaml
+++ b/tests/InputFiles/GeneralizedHarmonic/KerrSchild.yaml
@@ -162,6 +162,9 @@ Observers:
   VolumeFileName: "GhKerrSchildVolume"
   ReductionFileName: "GhKerrSchildReductions"
 
+Interpolator:
+  Verbosity: Quiet
+
 ApparentHorizons:
   AhA:
     InitialGuess:
