--- a/tests/InputFiles/GrMhd/GhValenciaDivClean/GhMhdBondiMichel.yaml
+++ b/tests/InputFiles/GrMhd/GhValenciaDivClean/GhMhdBondiMichel.yaml
@@ -186,6 +186,9 @@ EventsAndTriggers:
         Values: [2]
   : - Completion
 
+Interpolator:
+  Verbosity: Quiet
+
 ApparentHorizons:
   AhA:
     InitialGuess:
