--- a/tests/InputFiles/GrMhd/GhValenciaDivClean/GhMhdTovStar.yaml
+++ b/tests/InputFiles/GrMhd/GhValenciaDivClean/GhMhdTovStar.yaml
@@ -172,6 +172,9 @@ EventsAndTriggers:
         Values: [3]
   : - Completion
 
+Interpolator:
+  Verbosity: Quiet
+
 Observers:
   VolumeFileName: "GhMhdTovStarVolume"
   ReductionFileName: "GhMhdTovStarReductions"
