Add size control logic and test.
This is done via an abstract base class SizeControlState
that has derived classes for each concrete state of the size
control system.

The logic (and control errors) are added in such a way that the
code can be tested independently.  There is (intentionally) no
dependence on Strahlkorpers, FunctionsOfTime, ZeroCrossingPredictors,
or the control system framework itself.

The thing that calls the SizeControlState member functions
(and thus needs to know about Strahlkorpers, FunctionsOfTime, etc so
that it can compute the arguments to those member functions)
will be added in a later PR.

--- a/src/ControlSystem/ControlErrors/CMakeLists.txt
+++ b/src/ControlSystem/ControlErrors/CMakeLists.txt
@@ -1,11 +1,37 @@
 # Distributed under the MIT License.
 # See LICENSE.txt for details.
 
+set(LIBRARY ControlErrors)
+
+add_spectre_library(${LIBRARY})
+
+spectre_target_sources(
+  ${LIBRARY}
+  PRIVATE
+  SizeControlInfo.cpp
+  SizeControlStateAhSpeed.cpp
+  SizeControlStateDeltaR.cpp
+  SizeControlStateInitial.cpp
+  )
+
 spectre_target_headers(
   ${LIBRARY}
   INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/src
   HEADERS
   Expansion.hpp
   Rotation.hpp
+  SizeControlInfo.hpp
+  SizeControlState.hpp
+  SizeControlStateAhSpeed.hpp
+  SizeControlStateDeltaR.hpp
+  SizeControlStateInitial.hpp
   Translation.hpp
+  )
+
+target_link_libraries(
+  ${LIBRARY}
+  PUBLIC
+  Boost::boost
+  DataStructures
+  ErrorHandling
   )
