--- a/tests/Unit/ControlSystem/CMakeLists.txt
+++ b/tests/Unit/ControlSystem/CMakeLists.txt
@@ -35,6 +35,7 @@ add_test_library(
 target_link_libraries(
   ${LIBRARY}
   PRIVATE
+  ControlErrors
   ControlSystem
   EventsAndDenseTriggers
   FunctionsOfTime
