--- a/tests/Unit/ControlSystem/ControlErrors/CMakeLists.txt
+++ b/tests/Unit/ControlSystem/ControlErrors/CMakeLists.txt
@@ -5,5 +5,6 @@ set(LIBRARY_SOURCES
   ${LIBRARY_SOURCES}
   ControlErrors/Test_Expansion.cpp
   ControlErrors/Test_Rotation.cpp
+  ControlErrors/Test_SizeControlStates.cpp
   ControlErrors/Test_Translation.cpp
   PARENT_SCOPE)
