Move size control to ControlErrors/Size directory.
No changes other than moving, #includes, and CMakeLists.txt

--- a/src/ControlSystem/ControlErrors/CMakeLists.txt
+++ b/src/ControlSystem/ControlErrors/CMakeLists.txt
@@ -1,18 +1,7 @@
 # Distributed under the MIT License.
 # See LICENSE.txt for details.
 
-set(LIBRARY ControlErrors)
-
-add_spectre_library(${LIBRARY})
-
-spectre_target_sources(
-  ${LIBRARY}
-  PRIVATE
-  SizeControlInfo.cpp
-  SizeControlStateAhSpeed.cpp
-  SizeControlStateDeltaR.cpp
-  SizeControlStateInitial.cpp
-  )
+add_subdirectory(Size)
 
 spectre_target_headers(
   ${LIBRARY}
@@ -20,18 +9,5 @@ spectre_target_headers(
   HEADERS
   Expansion.hpp
   Rotation.hpp
-  SizeControlInfo.hpp
-  SizeControlState.hpp
-  SizeControlStateAhSpeed.hpp
-  SizeControlStateDeltaR.hpp
-  SizeControlStateInitial.hpp
   Translation.hpp
-  )
-
-target_link_libraries(
-  ${LIBRARY}
-  PUBLIC
-  Boost::boost
-  DataStructures
-  ErrorHandling
   )
