--- a/tests/Unit/ControlSystem/CMakeLists.txt
+++ b/tests/Unit/ControlSystem/CMakeLists.txt
@@ -35,10 +35,10 @@ add_test_library(
 target_link_libraries(
   ${LIBRARY}
   PRIVATE
-  ControlErrors
   ControlSystem
   EventsAndDenseTriggers
   FunctionsOfTime
   ObserverHelpers
+  SizeControlErrors
   Utilities
 )
