Fixup: remove labels, store the objects instead.
This involves several things besides just removing labels:
 - All the derived classes of size::State need pup functions
   (even though none of them store any data; this is because Info
    now stores a std::unique_ptr<State> and Info is serializable,
    and when you serialze/deserialize you want the same state back)
 - All the derived classes of size::State need get_clone() functions
   (so that we can copy the state before we modify it in the driver
    function that is not part of this PR but is coming soon)
 - The test was rewritten (and simplified) because there are now
   std::unique_ptrs flying around which are not copyable.
   And there is registration stuff.

--- a/src/ControlSystem/ControlErrors/Size/CMakeLists.txt
+++ b/src/ControlSystem/ControlErrors/Size/CMakeLists.txt
@@ -12,6 +12,7 @@ spectre_target_sources(
   AhSpeed.cpp
   DeltaR.cpp
   Initial.cpp
+  RegisterDerivedWithCharm.cpp
   )
 
 spectre_target_headers(
@@ -23,6 +24,7 @@ spectre_target_headers(
   AhSpeed.hpp
   DeltaR.hpp
   Initial.hpp
+  RegisterDerivedWithCharm.hpp
   )
 
 target_link_libraries(
@@ -31,4 +33,6 @@ target_link_libraries(
   Boost::boost
   DataStructures
   ErrorHandling
+  GSL::gsl
+  Parallel
   )
