--- a/tests/Unit/ControlSystem/CMakeLists.txt
+++ b/tests/Unit/ControlSystem/CMakeLists.txt
@@ -39,6 +39,7 @@ target_link_libraries(
   EventsAndDenseTriggers
   FunctionsOfTime
   ObserverHelpers
+  Parallel
   SizeControlErrors
   Utilities
 )
