--- a/src/Domain/CoordinateMaps/CMakeLists.txt
+++ b/src/Domain/CoordinateMaps/CMakeLists.txt
@@ -32,6 +32,7 @@ spectre_target_sources(
   Rotation.cpp
   SpecialMobius.cpp
   UniformCylindricalEndcap.cpp
+  UniformCylindricalSide.cpp
   Wedge.cpp
   )
 
@@ -71,6 +72,7 @@ spectre_target_headers(
   Tags.hpp
   TimeDependentHelpers.hpp
   UniformCylindricalEndcap.hpp
+  UniformCylindricalSide.hpp
   Wedge.hpp
   )
 
