--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ include(SetupStl)
 include(SetupLibsharp)
 include(SetupXsimd)
 include(SetupYamlCpp)
+include(SetupSpec)
 
 include(SetupLIBCXXCharm)
 # The precompiled header must be setup after all libraries have been found
