fixup: Add SpecNumericalData AnalyticData reader
This is incomplete and untested. The things that definitely still need to happen
are:
- Add AnalyticData that reads SpEC stuff.
- Write Mutator to replace SetVariables that computes spacetime metric, then Phi
  numerically, then Pi_{ij} from extrinsic curvature, and then Pi_{0a} from H_a,
  g_{ab}, and Phi_{iab}. Need to first write Pi_{0a} in terms of other
  components. This is just tedious math from the 1-index constraint.

--- a/src/PointwiseFunctions/AnalyticData/GeneralRelativity/CMakeLists.txt
+++ b/src/PointwiseFunctions/AnalyticData/GeneralRelativity/CMakeLists.txt
@@ -9,6 +9,7 @@ spectre_target_sources(
   ${LIBRARY}
   PRIVATE
   BrillLindquist.cpp
+  SpecNumericalData.cpp
   )
 
 spectre_target_headers(
@@ -17,6 +18,7 @@ spectre_target_headers(
   HEADERS
   AnalyticData.hpp
   BrillLindquist.hpp
+  SpecNumericalData.hpp
   )
 
 target_link_libraries(
@@ -27,4 +29,7 @@ target_link_libraries(
   ErrorHandling
   GeneralRelativity
   Interpolation
+
+  PRIVATE
+  SpEC::Exporter
   )
