--- a/tests/Unit/ControlSystem/ControlErrors/CMakeLists.txt
+++ b/tests/Unit/ControlSystem/ControlErrors/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 set(LIBRARY_SOURCES
   ${LIBRARY_SOURCES}
+  ControlErrors/Test_ComovingCharSpeedDerivative.cpp
   ControlErrors/Test_Expansion.cpp
   ControlErrors/Test_Rotation.cpp
   ControlErrors/Test_Shape.cpp
